Revert "Bug/add tab spacing"

--- a/ui/components/tabs/flavors/default/_index.scss
+++ b/ui/components/tabs/flavors/default/_index.scss
@@ -116,10 +116,6 @@
       background-color: $color-brand-dark;
     }
   }
-
-  + .slds-tabs--default__item {
-    margin-left: $spacing-large;
-  }
 }
 
 .slds-tabs--default__content {
